Fixing alignment of listing headers

--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -258,6 +258,7 @@ $small_font_size: 12px;
   text-align: center;
   text-transform: none;
   margin-top: 35px;
+  line-height: 1;
   em {
     text-transform: uppercase;
     font-size: $listing_heading_font_size;
